--- a/sources/Debate-frontend/src/app/loginpage/loginpage.component.scss
+++ b/sources/Debate-frontend/src/app/loginpage/loginpage.component.scss
@@ -24,12 +24,10 @@
   padding: 2em;
 }
 
-.go-register-button {
-  display: flex;
-  justify-content: center;
-}
-
 .submit-button {
   margin: 0.5em 0;
+}
 
+.mat-stroked-button{
+  margin-top: 10px;
 }
