--- a/sources/Debate-frontend/src/app/debate/debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate.component.scss
@@ -10,33 +10,48 @@
 }
 
 .header {
-    margin: 1em auto 2em;
-}
-
-.section-button {
-  float: right;
-  width: 10em;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  margin: 1em auto 2em;
+  
+  .section-button {
+    align-self: flex-end;
+    width: 10em;
+    overflow: hidden;
+    @extend .text-center;
+  }
 }
 
 @-ms-keyframes spin {
-  from { -ms-transform: rotate(360deg); }
-  to { -ms-transform: rotate(0deg); }
+  from {
+    -ms-transform: rotate(360deg);
+  }
+  to {
+    -ms-transform: rotate(0deg);
+  }
 }
 @-moz-keyframes spin {
-  from { -moz-transform: rotate(360deg); }
-  to { -moz-transform: rotate(0deg); }
+  from {
+    -moz-transform: rotate(360deg);
+  }
+  to {
+    -moz-transform: rotate(0deg);
+  }
 }
 @-webkit-keyframes spin {
-  from { -webkit-transform: rotate(360deg); }
-  to { -webkit-transform: rotate(0deg); }
+  from {
+    -webkit-transform: rotate(360deg);
+  }
+  to {
+    -webkit-transform: rotate(0deg);
+  }
 }
 @keyframes spin {
   from {
-      transform:rotate(360deg);
+    transform: rotate(360deg);
   }
   to {
-      transform:rotate(0deg);
+    transform: rotate(0deg);
   }
 }
 
@@ -51,6 +66,7 @@
   list-style: none;
   width: 80%;
   margin: auto;
+  margin-top: 2em;
 }
 
 .no-content-info {
