--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
@@ -60,7 +60,7 @@
   </mat-expansion-panel-header>
   <p>{{ argument.content }}</p>
   <p class="argument-footer">
-    {{ argument.authorName }} - Ostatnio edytowane:
+    {{ argument.author }} - Ostatnio edytowane:
     {{ argument.lastEditTime | timeago }}
   </p>
   <mat-divider></mat-divider>
