added searchByTags functionality

--- a/sources/Debate-frontend/src/app/tag-search/tag-search.component.html
+++ b/sources/Debate-frontend/src/app/tag-search/tag-search.component.html
@@ -40,3 +40,4 @@
     </mat-option>
   </mat-autocomplete>
 </mat-form-field>
+<button mat-raised-button color="primary" (click)="searchDebateByTags()">Szukaj debat</button>
