--- a/sources/Debate-frontend/src/app/common/load-more/load-more.component.html
+++ b/sources/Debate-frontend/src/app/common/load-more/load-more.component.html
@@ -1,4 +1,3 @@
 <div>
-    <button *ngIf="hasMore" mat-raised-button color="primary" class="load-more-button" (click)="emitLoadRequest()">Załaduj kolejne</button>
-    <span *ngIf="!hasMore"> Nie ma kolejnych debat do załadowania</span>
+    <button mat-raised-button color="primary" (click)="emitLoadRequest()">Załaduj kolejne</button>
 </div>
