Add new comment addition component and adjusted comment service to reflect new backend API

--- a/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate-argument/debate-argument.component.html
@@ -83,6 +83,7 @@
       *ngFor="let comment of comments"
       [comment]="comment"
     ></app-comment>
+    <app-add-comment *ngIf="isSignedIn" (commentAdded)="onCommentAdded($event)"></app-add-comment>
   </ul>
   <mat-progress-bar
     mode="buffer"
