--- a/sources/Debate-frontend/src/app/debate/debate.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate.component.html
@@ -36,24 +36,33 @@
           [argument]="pro"
         ></app-debate-argument>
       </mat-accordion>
+      <h3
+        class="no-content-info"
+        *ngIf="
+          !isArgumentSectionLoading &&
+          !isArgumentSectionLoadingError &&
+          pros.length === 0
+        "
+      >
+        Brak argumentów za
+      </h3>
       <mat-accordion>
         <app-debate-argument
           *ngFor="let con of cons"
           [argument]="con"
         ></app-debate-argument>
       </mat-accordion>
+      <h3
+        class="no-content-info"
+        *ngIf="
+          !isArgumentSectionLoading &&
+          !isArgumentSectionLoadingError &&
+          cons.length === 0
+        "
+      >
+        Brak argumentów przeciw
+      </h3>
     </div>
-    <h3
-      class="no-content-info"
-      *ngIf="
-        !isArgumentSectionLoading &&
-        !isArgumentSectionLoadingError &&
-        pros.length === 0 &&
-        cons.length === 0
-      "
-    >
-      Brak argumentów
-    </h3>
     <mat-progress-bar
       mode="buffer"
       *ngIf="isArgumentSectionLoading"
@@ -79,19 +88,6 @@
   <!-- Komentarze -->
 
   <ng-template #commentSection>
-    <ul
-      class="comment-list"
-      *ngIf="
-        !isCommentSectionLoading &&
-        !isCommentSectionLoadingError &&
-        comments.length !== 0
-      "
-    >
-      <app-comment
-        *ngFor="let comment of comments"
-        [comment]="comment"
-      ></app-comment>
-    </ul>
     <h3
       class="no-content-info"
       *ngIf="
@@ -102,6 +98,19 @@
     >
       Brak komentarzy
     </h3>
+    <ul
+      class="comment-list"
+      *ngIf="!isCommentSectionLoading && !isCommentSectionLoadingError"
+    >
+      <app-comment
+        *ngFor="let comment of comments"
+        [comment]="comment"
+      ></app-comment>
+      <app-add-comment
+        *ngIf="isSignedIn"
+        (commentAdded)="onCommentAdded($event)"
+      ></app-add-comment>
+    </ul>
     <mat-progress-bar
       mode="buffer"
       *ngIf="isCommentSectionLoading"
