--- a/sources/Debate-frontend/src/app/debate/debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate.component.scss
@@ -74,6 +74,13 @@
   @extend .text-center;
 }
 
+.new-argument-button {
+  @extend .text-center;
+  font-size: large;
+  padding: 2em 2em;
+  margin-top: 0.5em;
+}
+
 .pt-2 {
   padding-top: 2em;
 }
