Add argument section paging

--- a/sources/Debate-frontend/src/app/debate/debate.component.html
+++ b/sources/Debate-frontend/src/app/debate/debate.component.html
@@ -108,6 +108,12 @@
         Załaduj ponownie
       </button>
     </div>
+
+    <app-load-more
+      *ngIf="!isArgumentSectionLoading && !isArgumentSectionLoadingError && hasMoreArguments"
+      (loadRequested)="onLoadMoreArguments()"
+    >
+    </app-load-more>
   </ng-template>
 
   <!-- Komentarze -->
