--- a/sources/Debate-frontend/src/app/debate/debate.component.scss
+++ b/sources/Debate-frontend/src/app/debate/debate.component.scss
@@ -3,16 +3,19 @@
   align-items: flex-start;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   column-gap: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
 .text-center {
   text-align: center;
+  margin-top: 1em;
 }
 
 .header {
   display: flex;
   flex-direction: column;
-  margin: 1em auto 2em;
+  margin: 1em 1em 1em 2em;
   
   .section-button {
     align-self: flex-end;
@@ -83,4 +86,8 @@
 
 .pt-2 {
   padding-top: 2em;
+}
+
+.container{
+  margin: auto;
 }
